--- a/catalog/books.html
+++ b/catalog/books.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="../index.html">Rreth nesh</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">Librat</a>
+            <a class="nav-link" href="books.html">Librat</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../index.html">Kontakti</a>
@@ -195,7 +195,7 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <p style="color: #fed136">Biblioteka - Ibrahim Rugova</p>
+				 <a style="color: #fed136" href="#">&copy; Biblioteka - Ibrahim Rugova</a>
               </li>              
             </ul>
           </div>
